# HITO-PROTOTYPE

./: .gitignore  CMakeLists.txt  HITO.sln  README.md
CharacterUserInterface/: CMakeLists.txt  Main.cpp  dialogue_scene.hpp
CharacterUserInterface/Project/: Project.sln
CharacterUserInterface/Project/Project/: Project.vcxproj  Project.vcxproj.filters
HITO/: HITO.vcxproj  HITO.vcxproj.filters  Main.cpp  analyzer.cpp  analyzer.h  cfg.h  clock.cpp  configure.h  data.h  dialogue_manager.cpp  dialogue_manager.h  dialogue_scene.cpp  dialogue_scene.h  draw.cpp  draw.h  drawing.cpp  drawing.h  game_main.cpp  game_main.h  home_main.cpp  home_main.h  home_scene.cpp  home_scene.h  human.cpp  human.h  main.h  morpheme.cpp  morpheme.h  nlu.cpp  nlu.h  oav_to_sen.cpp  oav_to_sen.h  part.cpp  part.h  scene.h  sentence.cpp  sentence.h  siv_config.cpp  siv_config.h  siv_main.cpp  (+4 more)
HITO/App/: affirmation.txt  denial.txt  interjections.txt  word.txt
